Fix space at the top of contact block

--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
@@ -21,17 +21,7 @@
         <div class="page__content">
             <div data-mount-programmes-explorer data-search-label="{{ page.search_placeholder_text }}"></div>
 
-            <section class="section section--end bg bg--light">
-                <div class="section__content">
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                </div>
-            </section>
-
-            <section class="section bg bg--light">
+            <section class="section section--top-space-large bg bg--light">
                 <div class="section__container">
                     {% include "patterns/organisms/contact/contact.html" with heading='Contact us' text="If you want to register your interest about joining the RCA and receive updates from the RCA and its community." image=page.contact_image %}
                 </div>
