Fix transition from categories to results

--- a/rca/static_src/javascript/programmes/components/ProgrammesExplorer.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesExplorer.scss
@@ -43,4 +43,12 @@
             transition: opacity 500ms ease-out;
         }
     }
+
+    &-exit {
+        display: block;
+    }
+
+    &-exit-active {
+        display: none;
+    }
 }
