--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -73,7 +73,7 @@
 
     {% include "patterns/organisms/facilities/facilities.html" with title='Facilities' slideshow=page.facilities_gallery  %}
 
-    {% include "patterns/organisms/featured-alumni/featured-alumni.html" with title="Our alumni" introduction="Our alumni form an international network of creative individuals who have shaped and continue to shape the world." alumni_links=page.notable_alumni_links %}
+    {% include "patterns/organisms/featured-alumni/featured-alumni.html" with title="Our alumni" introduction=programme_page_global_fields.alumni_summary_text alumni_links=page.notable_alumni_links %}
 
 </section>
 
