--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
@@ -23,7 +23,7 @@
 
             <section class="section section--top-space-large bg bg--light">
                 <div class="section__container">
-                    {% include "patterns/organisms/contact/contact.html" with heading='Contact us' text="If you want to register your interest about joining the RCA and receive updates from the RCA and its community." image=page.contact_image %}
+                    {% include "patterns/organisms/contact/contact.html" with heading=page.contact_title text=page.contact_text image=page.contact_image %}
                 </div>
             </section>
 
