--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
@@ -11,7 +11,7 @@
         <header class="page__header bg bg--dark">
             <div class="title-area title-area--index grid">
                 <div class="title-area__content">
-                    <h1 class="title-area__header heading heading--display-two">{{ title_multiline|linebreaksbr }}</h1>
+                    <h1 class="title-area__header heading heading--display-two">{{ page.title }}</h1>
                 </div>
                 <div class="title-area__aside">
                     {{ page.introduction|richtext }}
