Make sure to use body--one styles for programmes intro

--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
@@ -13,7 +13,7 @@
                 <div class="title-area__content">
                     <h1 class="title-area__header heading heading--display-two">{{ page.title }}</h1>
                 </div>
-                <div class="title-area__aside">
+                <div class="title-area__aside body--one">
                     {{ page.introduction|richtext }}
                 </div>
             </div>
