Add animated underline to category items

--- a/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoryItem.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoryItem.scss
@@ -61,9 +61,12 @@
     }
 
     &__heading-inner {
-        #{$root}:hover &,
-        #{$root}:focus & {
-            text-decoration: underline;
+        @include underline-hover-target();
+        position: relative;
+
+        #{$root}:focus &,
+        #{$root}:hover & {
+            @include underline-hover-target-reset();
         }
     }
 
