Add special case to disregard hover support for small viewports

--- a/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoryItem.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoryItem.scss
@@ -108,7 +108,8 @@
         }
 
         // Arrows only have the show-hide effect for hover-friendly browsers.
-        @media (hover: hover) {
+        // Does not respect mobile browsers’ fake hover support.
+        @media (hover: hover) and #{nth(nth($breakpoints, 1), 2)} {
             opacity: 0;
 
             #{$root}:hover &,
