Use RCA custom underlines for categories tabs on programmes listing

--- a/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoriesTablist.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoriesTablist.scss
@@ -20,9 +20,11 @@
     }
 
     &__tab {
+        @include underline-hover-target();
         color: $color--dark-grey;
         font-family: $font--primary;
         outline-width: initial;
+        transition: color $transition;
 
         &:not(:last-child) {
             margin-right: $gutter;
@@ -32,9 +34,12 @@
             }
         }
 
-        &[aria-selected='true'] {
+        &[aria-selected='true'],
+        &:focus,
+        &:hover {
+            @include underline-hover-target-reset();
+            position: relative;
             color: $color--black;
-            text-decoration: underline;
         }
     }
 }
