Remove test/print var

--- a/rca/project_styleguide/templates/patterns/organisms/facilities/facilities.html
+++ b/rca/project_styleguide/templates/patterns/organisms/facilities/facilities.html
@@ -7,7 +7,7 @@
             {% endif %}
             {% if facilities_snippet.link_url %}
                 <a href="{{ facilities_snippet.link_url }}" class="facilities__view-all facilities__view-all--medium body body--one link link--primary link--link">
-                    <span class="link__label">{{ facilities_snippet.link_title }}xx</span>
+                    <span class="link__label">{{ facilities_snippet.link_title }}</span>
                     <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
                 </a>
             {% endif %}
