Rework notches with the introducion of the API areas

--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -66,7 +66,7 @@
             {% endif %}
 
             {% if partnerships_block %}
-                <section class="section section--end section--top-space bg bg--dark">
+                <section class="section section--end section--top-space bg bg--light">
                     <div class="partnerships">
                         <div class="partnerships__header grid">
                             <h2 class="partnerships__heading heading heading--one">{{ partnerships_block.title }}</h2>
