--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -134,20 +134,20 @@
         .bg--stat-block & {
             &:first-child {
                 #{$root}__notch-fill {
-                    background-color: $color--white; // Changed from black to white for API module removal
+                    background-color: $color--black; // Changed from black to white for API module removal
 
                     &::before {
-                        background-color: $color--white; // Changed from black to white for API module removal
+                        background-color: $color--black; // Changed from black to white for API module removal
                     }
                 }
             }
 
             &:last-child {
                 #{$root}__notch-fill {
-                    background-color: $color--black; // Changed from white to black for API module removal
+                    background-color: $color--white; // Changed from white to black for API module removal
 
                     &::before {
-                        background-color: $color--black; // Changed from white to black for API module removal
+                        background-color: $color--white; // Changed from white to black for API module removal
                     }
                 }
             }
