--- a/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
+++ b/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
@@ -15,7 +15,7 @@
             <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
             </a>
         {% else %}
-            <a href="{{ page.contact_url }}" class="contact__link link link--secondary link--link body body--two" target="_blank" rel="noopener">
+            <a href="{{ page.contact_url }}" class="contact__link link link--secondary link--link body body--two" rel="noopener">
             <span class="link__label">Register your interest with us here</span>
             </a>
         {% endif %}
