--- a/rca/project_styleguide/templates/patterns/organisms/news/news_api_content.html
+++ b/rca/project_styleguide/templates/patterns/organisms/news/news_api_content.html
@@ -16,7 +16,7 @@
         {% endif %}
 
         {% if forloop.last %}
-                <a class="news__view-all link link--secondary link--link body body--two" href="/news-and-events/">
+                <a class="news__view-all link link--primary link--link body body--two" href="/news-and-events/">
                     <span class="link__label">See all news & events</span>
                     <svg class="link__icon" width="12" height="8"><use xlink:href="#arrow"></use></svg>
                 </a>
