Change title for news and events

--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -90,7 +90,7 @@
                     <div class="section__container">
 
                         <header class="section__header grid">
-                            <h3 class="section__heading section__heading--primary heading heading--two">News & events</h3>
+                            <h3 class="section__heading section__heading--primary heading heading--two">What&#39;s happening at the RCA</h3>
                         </header>
                         {% if news_and_events %}
                             <div class="section__content grid">
