--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -19,7 +19,7 @@
                 <section class="section section--top-space-large bg bg--dark">
 
                     <div class="proposition-statement grid">
-                        <div class="proposition-statement__introduction">{{ page.strapline }}</div>
+                        <h1 class="proposition-statement__introduction">{{ page.strapline }}</h1>
                         {% if page.strapline_cta_url and page.strapline_cta_text %}
                             <a href="{{ page.strapline_cta_url }}" class="proposition-statement__link link link--primary link--link link--book">
                                 <span class="link__label">{{ page.strapline_cta_text }}</span>
@@ -45,7 +45,6 @@
                     </section>
 
             {% endif %}
-            {% comment %}
                 {% if alumni_stories %}
                     <section class="section section--top-space bg bg--dark">
 
@@ -61,14 +60,13 @@
 
                     </section>
                 {% endif %}
-            {% endcomment %}
 
             {% if stats_block %}
                 {% include "patterns/organisms/stat-block/stat-block.html" %}
             {% endif %}
 
             {% if partnerships_block %}
-                <section class="section section--end section--top-space bg bg--dark">
+                <section class="section section--end section--top-space bg bg--light">
                     <div class="partnerships">
                         <div class="partnerships__header grid">
                             <h2 class="partnerships__heading heading heading--one">{{ partnerships_block.title }}</h2>
@@ -82,7 +80,6 @@
                 </section>
             {% endif %}
 
-            {% comment %}
                 <section class="section section--end bg bg--dark">
 
                     <div class="section__notch section__notch--top">
@@ -93,7 +90,7 @@
                     <div class="section__container">
 
                         <header class="section__header grid">
-                            <h3 class="section__heading section__heading--primary heading heading--two">News & events</h3>
+                            <h3 class="section__heading section__heading--primary heading heading--two">What&#39;s happening at the RCA</h3>
                         </header>
                         {% if news_and_events %}
                             <div class="section__content grid">
@@ -104,7 +101,6 @@
                     </div>
 
                 </section>
-            {% endcomment %}
 
         </div>
 
