Booking bar base

--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
@@ -33,7 +33,7 @@
 
         <div class="page__content">
             
-            
+            {% include "patterns/molecules/booking-bar/booking-bar.html" with item=page.bookingBar %}
             
         </div>
 
