Booking bar html and css

--- a/rca/project_styleguide/templates/patterns/molecules/booking-bar/booking-bar.html
+++ b/rca/project_styleguide/templates/patterns/molecules/booking-bar/booking-bar.html
@@ -1,12 +1,10 @@
-<div class="booking-bar">
-    <div class="booking-bar__container">
+<div class="booking-bar bg bg--dark">
+    <div class="booking-bar__container grid">
         <div class="booking-bar__message">
             {{ item.message }}
         </div>
         <div class="booking-bar__action">
-            <a href="{{ item.link }}" class="booking-bar__link">
-                {{ item.action }}
-            </a>
+            {% include "patterns/atoms/modal-launcher/modal-launcher.html" %}
         </div>
     </div>
 </div>
