Adding css for booking bar and modal launcher to main.scss

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -22,6 +22,7 @@
 @import 'components/button';
 @import 'components/blockquote';
 @import 'components/body';
+@import 'components/booking-bar';
 @import 'components/breadcrumb';
 @import 'components/burger';
 @import 'components/bg';
@@ -52,6 +53,7 @@
 @import 'components/key-details';
 @import 'components/link';
 @import 'components/logo';
+@import 'components/modal-launcher';
 @import 'components/nav';
 @import 'components/news';
 @import 'components/overview';
