--- a/rca/project_styleguide/templates/patterns/atoms/modal-launcher/modal-launcher.html
+++ b/rca/project_styleguide/templates/patterns/atoms/modal-launcher/modal-launcher.html
@@ -4,7 +4,7 @@
             {{ item.action }}
         </div>
         <div class="modal-launcher__icon-container">
-            <svg width="18" height="18" class="modal-launcher__icon"><use xlink:href="#plus"></use></svg>
+            <svg width="18" height="18" class="modal-launcher__icon" aria-hidden="true"><use xlink:href="#plus"></use></svg>
         </div>
     </div>
 </a>
