Short course modifier

--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -113,6 +113,13 @@
                 grid-column: 2 / span 1;
             }
         }
+
+        // Template specific alterations
+        .app--short-course & {
+            @include media-query(large) {
+                grid-column: 3 / span 2;
+            }
+        }
     }
 
     &__notch {
