--- a/rca/static_src/sass/components/_accordion-block.scss
+++ b/rca/static_src/sass/components/_accordion-block.scss
@@ -1,4 +1,5 @@
 .accordion-block {
+    $root: &;
     overflow: hidden;
     margin-top: ($gutter * 4);
     padding: 0;
@@ -12,6 +13,14 @@
         @include media-query(large) {
             padding: 0 0 ($gutter * 8);
             margin-top: ($gutter * 4);
+        }
+    }
+
+    &--large-heading {
+        #{$root}__heading {
+            @include media-query(large) {
+                margin-bottom: ($gutter * 3);
+            }
         }
     }
 
