new course_type to determine if component is on short course or programme page

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -9,7 +9,7 @@
         </header>
         <div class="section__content grid">
             <div class="programme-overview__key-details">
-                {% include "patterns/molecules/key-details/key-details.html" %}
+                {% include "patterns/molecules/key-details/key-details.html" with course_type="programme" %}
             </div>
             <div class="programme-overview__body">
                 <p class="introduction" property="schema:description">
