--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
@@ -1,72 +1,100 @@
-<div class="key-details">
+<div class="key-details {% if course_type == 'short' %}key-details--short{% endif %}">
     <div class="key-details__header">
         <h3 class="heading heading--five key-details__heading">Key details</h3>
     </div>
-    {% if page.programme_details_credits or page.programme_details_time or page.programme_details_duration %}
-        <div class="key-details__section key-details__section--details">
-            <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_field.key_details_programme_details_title }}</h4>
+    {% if course_type == 'short' %}
+        <div class="key-details__section key-details__section--fees">
+            <h4 class="body body--two key-details__sub-heading">Fees</h4>
             <ul class="key-details__list">
-                {% if page.programme_details_credits and page.programme_details_credits_suffix %}
                 <li class="key-details__list-item">
-                    {{ page.programme_details_credits }} {{ page.get_programme_details_credits_suffix_display }}
+                    &pound;600 before 28 February 2020
                 </li>
-                {% endif %}
-                {% if page.programme_details_time and  page.programme_details_time_suffix %}
                 <li class="key-details__list-item">
-                    {{ page.programme_details_time }} {{ page.get_programme_details_time_suffix_display }}
-                </li>
-                {% endif %}
-                {% if page.programme_details_duration %}
-                <li class="key-details__list-item">
-                    {{ page.get_programme_details_duration_display }}
-                </li>
-                {% endif %}
-            </ul>
-        </div>
-    {% endif %}
-    {% if page.next_open_day_date %}
-        <div class="key-details__section key-details__section--open-days">
-            <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_fields.key_details_next_open_day_title }}</h4>
-            <ul class="key-details__list">
-                <li class="key-details__list-item">{{ page.next_open_day_date }}</li>
-                <li class="key-details__list-item">
-                    <a class="key-details__link link link--secondary link--link" href="{{ page.link_to_open_days }}">
-                        <span class="link__label">{{ programme_page_global_fields.key_details_book_or_view_all_open_days_link_title }}</span>
-                        <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
-                    </a>
+                    &pound;900 after 29 February 2020
                 </li>
             </ul>
         </div>
-    {% endif %}
-    {% if page.application_deadline %}
-        <div class="key-details__section key-details__section--deadline">
-            <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_fields.key_details_application_deadline_title }}</h4>
+        <div class="key-details__section key-details__section--location">
+            <h4 class="body body--two key-details__sub-heading">Location</h4>
             <ul class="key-details__list">
-                {% if page.application_deadline_options == '1' %}
-                    <li class="key-details__list-item">{{ page.get_application_deadline_options_display }}</li>
-                {% else %}
-                    <li class="key-details__list-item">{{ page.application_deadline }}</li>
-                    <li class="key-details__list-item">{{ page.get_application_deadline_options_display }}</li>
-                {% endif %}
+                <li class="key-details__list-item">
+                    <a class="link link--tertiary" href="#">Royal College of Art Kensington Gore</a>
+                </li>
             </ul>
         </div>
-    {% endif %}
-    {% if page.career_opportunities.all %}
-        <div class="key-details__section key-details__section--career">
-            <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_fields.key_details_career_opportunities_title }}</h4>
-            <ul class="key-details__list">
-            {% for detail in page.career_opportunities.all %}
-                <li class="key-details__list-item">{{ detail.text }}</li>
-            {% endfor %}
-            </ul>
-        </div>
-    {% endif %}
-    {% if page.programme_specification.url %}
         <div class="key-details__section key-details__section--action">
-            <a class="key-details__link link link--secondary link--download" href="{{ page.programme_specification.url }}">
-                <span class="link__label">Download the {{ page.title }} {{ page.degree_level }} programme specification</span>
+            <a class="key-details__link link link--secondary link--download" href="#">
+                <span class="link__label">Register your interest to download the course brochure</span>
                 <svg width="8" height="12" class="link__icon"><use xlink:href="#download"></use></svg>
             </a>
         </div>
+    {% else %}
+        {% if page.programme_details_credits or page.programme_details_time or page.programme_details_duration %}
+            <div class="key-details__section key-details__section--details">
+                <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_field.key_details_programme_details_title }}</h4>
+                <ul class="key-details__list">
+                    {% if page.programme_details_credits and page.programme_details_credits_suffix %}
+                    <li class="key-details__list-item">
+                        {{ page.programme_details_credits }} {{ page.get_programme_details_credits_suffix_display }}
+                    </li>
+                    {% endif %}
+                    {% if page.programme_details_time and  page.programme_details_time_suffix %}
+                    <li class="key-details__list-item">
+                        {{ page.programme_details_time }} {{ page.get_programme_details_time_suffix_display }}
+                    </li>
+                    {% endif %}
+                    {% if page.programme_details_duration %}
+                    <li class="key-details__list-item">
+                        {{ page.get_programme_details_duration_display }}
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        {% endif %}
+        {% if page.next_open_day_date %}
+            <div class="key-details__section key-details__section--open-days">
+                <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_fields.key_details_next_open_day_title }}</h4>
+                <ul class="key-details__list">
+                    <li class="key-details__list-item">{{ page.next_open_day_date }}</li>
+                    <li class="key-details__list-item">
+                        <a class="key-details__link link link--secondary link--link" href="{{ page.link_to_open_days }}">
+                            <span class="link__label">{{ programme_page_global_fields.key_details_book_or_view_all_open_days_link_title }}</span>
+                            <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        {% endif %}
+        {% if page.application_deadline %}
+            <div class="key-details__section key-details__section--deadline">
+                <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_fields.key_details_application_deadline_title }}</h4>
+                <ul class="key-details__list">
+                    {% if page.application_deadline_options == '1' %}
+                        <li class="key-details__list-item">{{ page.get_application_deadline_options_display }}</li>
+                    {% else %}
+                        <li class="key-details__list-item">{{ page.application_deadline }}</li>
+                        <li class="key-details__list-item">{{ page.get_application_deadline_options_display }}</li>
+                    {% endif %}
+                </ul>
+            </div>
+        {% endif %}
+        {% if page.career_opportunities.all %}
+            <div class="key-details__section key-details__section--career">
+                <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_fields.key_details_career_opportunities_title }}</h4>
+                <ul class="key-details__list">
+                {% for detail in page.career_opportunities.all %}
+                    <li class="key-details__list-item">{{ detail.text }}</li>
+                {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+        {% if page.programme_specification.url %}
+            <div class="key-details__section key-details__section--action">
+                <a class="key-details__link link link--secondary link--download" href="{{ page.programme_specification.url }}">
+                    <span class="link__label">Download the {{ page.title }} {{ page.degree_level }} programme specification</span>
+                    <svg width="8" height="12" class="link__icon"><use xlink:href="#download"></use></svg>
+                </a>
+            </div>
+        {% endif %}
     {% endif %}
 </div>
