--- a/rca/project_styleguide/templates/patterns/organisms/accordion-block/accordion-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/accordion-block/accordion-block.html
@@ -1,7 +1,7 @@
-<div class="accordion-block {% if modifier %}{{ modifier }}{% endif %}" role="tablist" aria-multiselectable="true">
+<div class="accordion-block {% if course_type == 'short' %}accordion-block--large-heading{% endif %} {% if modifier %}{{ modifier }}{% endif %}" role="tablist" aria-multiselectable="true">
     {% if title %}
         <div class="grid">
-            <h4 class="accordion-block__heading heading heading--four">{{ title }}</h4>
+            <h4 class="accordion-block__heading heading {% if course_type == 'short' %}heading--two{% else %}heading--four{% endif %}">{{ title }}</h4>
         </div>
     {% endif %}
     <div class="grid">
