--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
@@ -3,31 +3,38 @@
         <h3 class="heading heading--five key-details__heading">Key details</h3>
     </div>
     {% if course_type == 'short' %}
-        <div class="key-details__section key-details__section--fees">
-            <h4 class="body body--two key-details__sub-heading">Fees</h4>
-            <ul class="key-details__list">
-                <li class="key-details__list-item">
-                    &pound;600 before 28 February 2020
-                </li>
-                <li class="key-details__list-item">
-                    &pound;900 after 29 February 2020
-                </li>
-            </ul>
-        </div>
-        <div class="key-details__section key-details__section--location">
-            <h4 class="body body--two key-details__sub-heading">Location</h4>
-            <ul class="key-details__list">
-                <li class="key-details__list-item">
-                    <a class="link link--tertiary" href="#">Royal College of Art Kensington Gore</a>
-                </li>
-            </ul>
-        </div>
-        <div class="key-details__section key-details__section--action">
-            <a class="key-details__link link link--secondary link--download" href="#">
-                <span class="link__label">Register your interest to download the course brochure</span>
-                <svg width="8" height="12" class="link__icon"><use xlink:href="#download"></use></svg>
-            </a>
-        </div>
+        {% if page.shortcourse_details_fees %}
+            <div class="key-details__section key-details__section--fees">
+                <h4 class="body body--two key-details__sub-heading">Fees</h4>
+                <ul class="key-details__list">
+                    {% for item in page.shortcourse_details_fees %}
+                    <li class="key-details__list-item">
+                        {{ item.fee }}
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+        {% if page.shortcourse_details_location %}
+            <div class="key-details__section key-details__section--location">
+                <h4 class="body body--two key-details__sub-heading">Location</h4>
+                <ul class="key-details__list">
+                    {% for item in page.shortcourse_details_location %}
+                    <li class="key-details__list-item">
+                        <a class="link link--tertiary" href="#">{{ item.location }}</a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+        {% if page.shortcourse_details_register_link %}
+            <div class="key-details__section key-details__section--action">
+                <a class="key-details__link link link--secondary link--download" href="{{ page.shortcourse_details_register_link }}">
+                    <span class="link__label">Register your interest to download the course brochure</span>
+                    <svg width="8" height="12" class="link__icon" aria-hidden="true"><use xlink:href="#download"></use></svg>
+                </a>
+            </div>
+        {% endif %}
     {% else %}
         {% if page.programme_details_credits or page.programme_details_time or page.programme_details_duration %}
             <div class="key-details__section key-details__section--details">
