--- a/rca/static_src/sass/components/_modal-launcher.scss
+++ b/rca/static_src/sass/components/_modal-launcher.scss
@@ -7,6 +7,7 @@
         flex-direction: row;
         justify-content: space-between;
         border-top: 4px solid $color--tertiary;
+        transition: border-color $cubic-transition;
     }
 
     &__label {
@@ -23,6 +24,7 @@
         justify-content: center;
         width: ($gutter * 2.25);
         background-color: $color--tertiary;
+        transition: background-color $cubic-transition;
     }
 
     &__icon {
@@ -33,8 +35,16 @@
     }
 
     &:hover {
+        #{$root}__container {
+            border-top: 4px solid $color--white;
+        }
+
+        #{$root}__icon-container {
+            background-color: $color--white;
+        }
+
         #{$root}__icon {
-            fill: $color--black;
+            fill: $color--tertiary;
         }
     }
 
