--- a/rca/static_src/sass/base/_typography.scss
+++ b/rca/static_src/sass/base/_typography.scss
@@ -28,8 +28,15 @@ h6 {
 }
 
 blockquote {
-    font-family: $font--secondary;
-    font-style: italic;
+    font-family: $font--primary;
+    font-style: normal;
+    font-weight: inherit;
+    text-transform: inherit;
+}
+
+cite {
+    font-family: $font--primary;
+    font-style: normal;
     font-weight: inherit;
     text-transform: inherit;
 }
