--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -20,7 +20,6 @@
 @import 'components/alumni-stories';
 @import 'components/back-link';
 @import 'components/button';
-@import 'components/blockquote';
 @import 'components/body';
 @import 'components/booking-bar';
 @import 'components/breadcrumb';
@@ -83,6 +82,7 @@
 @import 'components/tab-item';
 @import 'components/tab-nav';
 @import 'components/title-area';
+@import 'components/quote';
 @import 'components/video-modal';
 
 @import '../javascript/programmes/components/ProgrammesResults/ProgrammesResults';
