--- a/rca/static_src/sass/components/_staff-overview.scss
+++ b/rca/static_src/sass/components/_staff-overview.scss
@@ -1,6 +1,6 @@
 .staff-overview {
     $root: &;
-    padding-top: ($gutter * 4); // Might need adjusting for notches
+    padding-top: ($gutter * 4);
     padding-bottom: ($gutter * 6);
 
     &--single {
