New row spacing option for sections - future consistency

--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -288,4 +288,14 @@
             }
         }
     }
+
+    &__row {
+        &--first {
+            padding-top: ($gutter * 3);
+
+            @include media-query(large) {
+                padding-top: ($gutter * 6);
+            }
+        }
+    }
 }
