Quote styling when in carousel

--- a/rca/static_src/sass/components/_quote.scss
+++ b/rca/static_src/sass/components/_quote.scss
@@ -18,4 +18,10 @@
         color: $color--dark-grey;
         margin-left: ($gutter / 4);
     }
+
+    .carousel--square & {
+        @include media-query(large) {
+            padding-right: 33.33%;
+        }
+    }
 }
