--- a/rca/static_src/sass/base/_typography.scss
+++ b/rca/static_src/sass/base/_typography.scss
@@ -32,6 +32,8 @@ blockquote {
     font-style: normal;
     font-weight: inherit;
     text-transform: inherit;
+    padding: 0;
+    margin: 0;
 }
 
 cite {
