removing meta variable in favour of dark/light bg variants

--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -23,8 +23,7 @@ $color--scrollbar-lightbg-bg: $color--black-24;
 $color--grid-line-light: $color--white-12;
 $color--grid-line-dark: $color--black-12;
 
-$color--meta: $color--light-grey;
-$color--meta-darkbg: $color--meta;
+$color--meta-darkbg: $color--light-grey;
 $color--meta-lightbg: $color--dark-grey;
 
 // --------------------------------- Fonts --------------------------------------
