--- a/rca/static_src/sass/components/_social-item.scss
+++ b/rca/static_src/sass/components/_social-item.scss
@@ -57,7 +57,7 @@
         #{$root}__link {
             &:hover {
                 #{$root}__icon {
-                    fill: $color--light-grey;
+                    fill: $color--meta-darkbg;
                 }
             }
         }
