--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
@@ -75,8 +75,55 @@
             </section>
 
             <section class="section bg bg--light">
+
                 <div class="section__row section__row--first">
                     {% include "patterns/organisms/carousel/carousel--quotes.html" with carousel=partnerships_block.slides modifier='carousel--square carousel--quotes' datatag='data-square-carousel' %}
+                </div>
+
+                <div class="section__row">
+                    {% with staff=related_staff %}
+                        {% if staff %}
+                            {% if staff|length > 1 %}
+                                    {% include "patterns/organisms/staff-overview/staff-overview.html" %}
+                            {% else %}
+                                {% include "patterns/organisms/staff-overview/staff-overview--single.html" %}
+                            {% endif %}
+                        {% endif %}
+                    {% endwith %}
+                </div>
+
+            </section>
+
+            <section class="section bg bg--dark">
+
+                <div class="section__row">
+                    {% if page.programme_gallery %}
+                        <header class="section__header grid">
+                            <h3 class="section__heading section__heading--secondary heading heading--four">
+                                Gallery
+                            </h3>
+                        </header>
+                        <div class="section__content">
+                            {% include "patterns/organisms/slideshow/slideshow.html" with slideshow=page.programme_gallery modifier=programme_slideshow_modifier %}
+                        </div>
+                    {% endif %}
+                </div>
+
+            </section>
+
+            <section class="section bg bg--light">
+                <div class="contact-anchor" id="contact"></div>
+                <div class="section__container">
+                    {% include "patterns/organisms/contact/contact.html" with heading=programme_page_global_fields.contact_title text=programme_page_global_fields.contact_text image=page.contact_image %}
+                </div>
+            </section>
+
+            <section class="section bg bg--dark">
+                <div class="section__notch">
+                    <div class="section__notch-fill section__notch-fill--third-col"></div>
+                </div>
+                <div class="section__container">
+                    {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with title=programme_page_global_fields.related_content_title %}
                 </div>
             </section>
 
