--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>
 
-                <div class="section__row short-course-accordion">
+                <div class="section__row short-course-accordion section__row--last">
                     <h2 class="heading heading--two"></h2>
                     {% include "patterns/organisms/accordion-block/accordion-block.html" with accordion_id='1' accordions=page.about_course_accordion title="About the course" course_type="short" %}
                 </div>
@@ -84,9 +84,9 @@
                     {% with staff=related_staff %}
                         {% if staff %}
                             {% if staff|length > 1 %}
-                                    {% include "patterns/organisms/staff-overview/staff-overview.html" %}
+                                    {% include "patterns/organisms/staff-overview/staff-overview.html" with title="Programme team" %}
                             {% else %}
-                                {% include "patterns/organisms/staff-overview/staff-overview--single.html" %}
+                                {% include "patterns/organisms/staff-overview/staff-overview--single.html" with title="Programme team" %}
                             {% endif %}
                         {% endif %}
                     {% endwith %}
@@ -96,7 +96,11 @@
 
             <section class="section bg bg--dark">
 
-                <div class="section__row">
+                <div class="section__notch">
+                    <div class="section__notch-fill section__notch-fill--third-col"></div>
+                </div>
+
+                <div class="section__row section__row--first section__row--last">
                     {% if page.programme_gallery %}
                         <header class="section__header grid">
                             <h3 class="section__heading section__heading--secondary heading heading--four">
@@ -104,14 +108,14 @@
                             </h3>
                         </header>
                         <div class="section__content">
-                            {% include "patterns/organisms/slideshow/slideshow.html" with slideshow=page.programme_gallery modifier=programme_slideshow_modifier %}
+                            {% include "patterns/organisms/slideshow/slideshow.html" with slideshow=page.programme_gallery modifier='slideshow--author-info' %}
                         </div>
                     {% endif %}
                 </div>
 
             </section>
 
-            <section class="section bg bg--light">
+            <section class="section section--top-space bg bg--light">
                 <div class="contact-anchor" id="contact"></div>
                 <div class="section__container">
                     {% include "patterns/organisms/contact/contact.html" with heading=programme_page_global_fields.contact_title text=programme_page_global_fields.contact_text image=page.contact_image %}
