--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
@@ -66,7 +66,7 @@
                     <li class="key-details__list-item">
                         <a class="key-details__link link link--secondary link--link" href="{{ page.link_to_open_days }}">
                             <span class="link__label">{{ programme_page_global_fields.key_details_book_or_view_all_open_days_link_title }}</span>
-                            <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+                            <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                         </a>
                     </li>
                 </ul>
@@ -99,7 +99,7 @@
             <div class="key-details__section key-details__section--action">
                 <a class="key-details__link link link--secondary link--download" href="{{ page.programme_specification.url }}">
                     <span class="link__label">Download the {{ page.title }} {{ page.degree_level }} programme specification</span>
-                    <svg width="8" height="12" class="link__icon"><use xlink:href="#download"></use></svg>
+                    <svg width="8" height="12" class="link__icon" aria-hidden="true"><use xlink:href="#download"></use></svg>
                 </a>
             </div>
         {% endif %}
