--- a/rca/project_styleguide/templates/patterns/organisms/carousel/carousel--square.html
+++ b/rca/project_styleguide/templates/patterns/organisms/carousel/carousel--square.html
@@ -11,12 +11,12 @@
         </ul>
         <div class="carousel__controls-group grid" data-glide-el="controls">
             <button class="carousel__button carousel__button--prev button" aria-label="Previous" data-glide-dir="<">
-                <svg class="carousel__button-icon" width="46" height="46">
+                <svg class="carousel__button-icon" width="46" height="46" aria-hidden="true">
                     <use xlink:href="#arrow-left" />
                 </svg>
             </button>
             <button class="carousel__button carousel__button--next button" aria-label="Next" data-glide-dir=">">
-                <svg class="carousel__button-icon" width="46" height="46">
+                <svg class="carousel__button-icon" width="46" height="46" aria-hidden="true">
                     <use xlink:href="#arrow-right" />
                 </svg>
             </button>
