--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -70,6 +70,7 @@
 @import 'components/search';
 @import 'components/search-toggle';
 @import 'components/section';
+@import 'components/skip-link';
 @import 'components/slide';
 @import 'components/slideshow';
 @import 'components/social-item';
