Updating modal launcher icon

--- a/rca/static_src/sass/components/_modal-launcher.scss
+++ b/rca/static_src/sass/components/_modal-launcher.scss
@@ -31,6 +31,7 @@
         fill: $color--white;
         width: 18px;
         height: 18px;
+        transform: rotate(-45deg);
         transition: fill $cubic-transition;
     }
 
