Modal content styling

--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -99,6 +99,7 @@ $z-index: (
     under-gridlines: 45,
     gridlines: 50,
     above-gridlines: 60,
+    sticky-nav-bar: 65,
     header: 70,
     nav-overlay: 75,
     nav: 80,
