--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -52,6 +52,7 @@
 @import 'components/key-details';
 @import 'components/link';
 @import 'components/logo';
+@import 'components/modal';
 @import 'components/modal-launcher';
 @import 'components/nav';
 @import 'components/news';
@@ -70,6 +71,8 @@
 @import 'components/search';
 @import 'components/search-toggle';
 @import 'components/section';
+@import 'components/short-course-details';
+@import 'components/short-course-details-item';
 @import 'components/skip-link';
 @import 'components/slide';
 @import 'components/slideshow';
@@ -84,6 +87,7 @@
 @import 'components/tab-nav';
 @import 'components/title-area';
 @import 'components/quote';
+@import 'components/upcoming-dates';
 @import 'components/video-modal';
 
 @import '../javascript/programmes/components/ProgrammesResults/ProgrammesResults';
