--- a/rca/project_styleguide/templates/patterns/atoms/modal-launcher/modal-launcher.html
+++ b/rca/project_styleguide/templates/patterns/atoms/modal-launcher/modal-launcher.html
@@ -1,4 +1,4 @@
-<a href="{{ item.link }}" class="modal-launcher">
+<button data-micromodal-trigger="{{ modal }}" class="modal-launcher">
     <div class="modal-launcher__container">
         <div class="modal-launcher__label">
             {{ item.action }}
@@ -7,4 +7,4 @@
             <svg width="18" height="18" class="modal-launcher__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
         </div>
     </div>
-</a>
+</button>
