--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
@@ -38,7 +38,7 @@
 
         <div class="page__content">
             
-            {% include "patterns/molecules/booking-bar/booking-bar.html" with item=page.booking_bar %}
+            {% include "patterns/molecules/booking-bar/booking-bar.html" with item=page.booking_bar modal='booking-details' %}
 
             <section class="section section--start bg bg--dark">
 
@@ -130,8 +130,26 @@
                     {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with title=programme_page_global_fields.related_content_title %}
                 </div>
             </section>
-
             
+        </div>
+
+        <div class="page__modals">
+            <div class="modal" id="booking-details" aria-hidden="true">
+                <div class="modal__overlay bg bg--light" tabindex="-1">
+                    {% include "patterns/atoms/grid-lines/grid-lines.html" %}
+                    <div class="modal__header grid">
+                        <button class="modal__close" aria-label="Close modal" data-micromodal-close>
+                            <span class="modal__close-label">Close</span>
+                            <svg width="14" height="14" class="modal__close-icon" aria-hidden="true"><use xlink:href="#close"></use></svg>
+                        </button>
+                    </div>
+                    <div class="modal__container grid" role="dialog" aria-modal="true" aria-labelledby="booking-details-title">
+                        <div class="modal__content">
+                            {% include "patterns/molecules/short-course-details/short-course-details.html" %}
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
