--- a/rca/static_src/sass/components/_modal-launcher.scss
+++ b/rca/static_src/sass/components/_modal-launcher.scss
@@ -1,6 +1,9 @@
 .modal-launcher {
     $root: &;
     display: inline-block;
+    background-color: transparent;
+    padding: 0;
+    border: 0;
 
     &__container {
         display: flex;
