Lots of aria-hidden trues on svgs for accessibility

--- a/rca/project_styleguide/templates/patterns/atoms/back-link/back-link.html
+++ b/rca/project_styleguide/templates/patterns/atoms/back-link/back-link.html
@@ -1,4 +1,4 @@
 <a class="back-link" data-subnav-back>
-    <svg class="back-link__icon" width="12" height="8"><use xlink:href="#arrow"></use></svg>
+    <svg class="back-link__icon" width="12" height="8" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
     <span class="back-link__text">Back</span>
 </a>
