--- a/rca/project_styleguide/templates/patterns/atoms/link-primary/link-primary.html
+++ b/rca/project_styleguide/templates/patterns/atoms/link-primary/link-primary.html
@@ -1,4 +1,4 @@
 <a class="link link--primary" href="{{ value.href }}">
     <span class="link__label">{{ value.text }}</span>
-    <svg width="12" height="8" class="link__icon link__icon--rotated"><use xlink:href="#arrow"></use></svg>
+    <svg width="12" height="8" class="link__icon link__icon--rotated" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
 </a>
