--- a/rca/project_styleguide/templates/patterns/molecules/upcoming-dates/upcoming-dates.html
+++ b/rca/project_styleguide/templates/patterns/molecules/upcoming-dates/upcoming-dates.html
@@ -11,7 +11,7 @@
             <div class="upcoming-dates__row-item upcoming-dates__action">
                 <a href="#" class="link link--tertiary link--link">
                     <span class="link__label">Book</span>
-                    <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+                    <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow" aria-hidden="true"></use></svg>
                 </a>
             </div>
         </div>
@@ -22,7 +22,7 @@
             <div class="upcoming-dates__row-item upcoming-dates__action">
                 <a href="#" class="link link--tertiary link--link">
                     <span class="link__label">Book</span>
-                    <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+                    <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow" aria-hidden="true"></use></svg>
                 </a>
             </div>
         </div>
@@ -33,7 +33,7 @@
             <div class="upcoming-dates__row-item upcoming-dates__action">
                 <a href="#" class="link link--tertiary link--link">
                     <span class="link__label">Book</span>
-                    <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+                    <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow" aria-hidden="true"></use></svg>
                 </a>
             </div>
         </div>
