--- a/rca/project_styleguide/templates/patterns/atoms/link-primary/link-primary--download.html
+++ b/rca/project_styleguide/templates/patterns/atoms/link-primary/link-primary--download.html
@@ -1,4 +1,4 @@
 <a class="link link--primary link--download" href="{{ value.href }}">
     <span class="link__label">{{ value.text }}</span>
-    <svg width="12" height="8" class="link__icon"><use xlink:href="#download"></use></svg>
+    <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#download"></use></svg>
 </a>
