--- a/rca/project_styleguide/templates/patterns/atoms/link-primary/link-primary--link.html
+++ b/rca/project_styleguide/templates/patterns/atoms/link-primary/link-primary--link.html
@@ -1,6 +1,6 @@
 {% if href and text %}
     <a class="link link--primary link--link" href="{{ href }}">
         <span class="link__label">{{ text }}</span>
-        <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+        <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
     </a>
 {% endif %}
