Cursor on button

--- a/rca/static_src/sass/components/_modal-launcher.scss
+++ b/rca/static_src/sass/components/_modal-launcher.scss
@@ -4,6 +4,7 @@
     background-color: transparent;
     padding: 0;
     border: 0;
+    cursor: pointer;
 
     &__container {
         display: flex;
