external link styling

--- a/rca/project_styleguide/templates/patterns/molecules/links/links.html
+++ b/rca/project_styleguide/templates/patterns/molecules/links/links.html
@@ -12,6 +12,9 @@
         {% include 'patterns/atoms/link-primary/link-primary--link.html' %}
     </div>
     <div>
+        {% include 'patterns/atoms/link-primary/link-primary--external.html' %}
+    </div>
+    <div>
         {% include 'patterns/atoms/link-primary/link-primary--download.html' %}
     </div>
     <div>
@@ -27,6 +30,9 @@
         {% include 'patterns/atoms/link-secondary/link-secondary--link.html' %}
     </div>
     <div>
+        {% include 'patterns/atoms/link-secondary/link-secondary--external.html' %}
+    </div>
+    <div>
         {% include 'patterns/atoms/link-secondary/link-secondary--download.html' %}
     </div>
     <div>
@@ -40,6 +46,9 @@
     </div>
     <div>
         {% include 'patterns/atoms/link-tertiary/link-tertiary--link.html' %}
+    </div>
+    <div>
+        {% include 'patterns/atoms/link-tertiary/link-tertiary--external.html' %}
     </div>
     <div>
         {% include 'patterns/atoms/link-tertiary/link-tertiary--download.html' %}
@@ -62,6 +71,9 @@
         {% include 'patterns/atoms/link-primary/link-primary--link.html' %}
     </div>
     <div>
+        {% include 'patterns/atoms/link-primary/link-primary--external.html' %}
+    </div>
+    <div>
         {% include 'patterns/atoms/link-primary/link-primary--download.html' %}
     </div>
     <div>
@@ -77,6 +89,9 @@
         {% include 'patterns/atoms/link-secondary/link-secondary--link.html' %}
     </div>
     <div>
+        {% include 'patterns/atoms/link-secondary/link-secondary--external.html' %}
+    </div>
+    <div>
         {% include 'patterns/atoms/link-secondary/link-secondary--download.html' %}
     </div>
     <div>
@@ -90,6 +105,9 @@
     </div>
     <div>
         {% include 'patterns/atoms/link-tertiary/link-tertiary--link.html' %}
+    </div>
+    <div>
+        {% include 'patterns/atoms/link-tertiary/link-tertiary--external.html' %}
     </div>
     <div>
         {% include 'patterns/atoms/link-tertiary/link-tertiary--download.html' %}
