Adding sticky functionality to booking bar

--- a/rca/project_styleguide/templates/patterns/molecules/booking-bar/booking-bar.html
+++ b/rca/project_styleguide/templates/patterns/molecules/booking-bar/booking-bar.html
@@ -1,4 +1,5 @@
 <div class="booking-bar bg bg--dark">
+    {% include "patterns/atoms/grid-lines/grid-lines.html" %}
     <div class="booking-bar__container grid">
         <div class="booking-bar__message">
             {{ item.message }}
