--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
@@ -36,9 +36,9 @@
             </div>
         </header>
 
-        <div class="page__content">
-            
-            {% include "patterns/molecules/booking-bar/booking-bar.html" with item=page.booking_bar modal='booking-details' %}
+        {% include "patterns/molecules/booking-bar/booking-bar.html" with item=page.booking_bar modal='booking-details' %}
+
+        <div class="page__content js-sticky-point">
 
             <section class="section section--start bg bg--dark">
 
