--- a/rca/project_styleguide/templates/patterns/atoms/profile-teaser/profile-teaser.html
+++ b/rca/project_styleguide/templates/patterns/atoms/profile-teaser/profile-teaser.html
@@ -7,7 +7,7 @@
         {% image item.image fill-60x60 as profile_image %}
         <img src="{{ profile_image.url }}" width="{{ width }}" height="{{ height }}" alt="{{ profile_image.alt }}" class="profile-teaser__image">
         <div class="profile-teaser__content">
-            <h3 class="profile-teaser__heading body body--one">{{ item.name }}</h3>
+            <h3 class="profile-teaser__heading body body--one"><span class="profile-teaser__first-name">{{ item.first_name }}</span> <span class="profile-teaser__surname">{{ item.surname }}</span></h3>
             <p class="profile-teaser__meta body body--two">{{ item.meta }}</p>
         </div>
     {% if item.link %}
