--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -62,9 +62,11 @@
 @import 'components/pathways';
 @import 'components/pathway-item';
 @import 'components/partnerships';
+@import 'components/profile-teaser';
 @import 'components/programme-overview';
 @import 'components/proposition-statement';
 @import 'components/related-content';
+@import 'components/related-links';
 @import 'components/responsive-object';
 @import 'components/rich-text';
 @import 'components/scroll';
@@ -82,6 +84,7 @@
 @import 'components/step-item';
 @import 'components/stat-block';
 @import 'components/steps';
+@import 'components/student-listing';
 @import 'components/tabs';
 @import 'components/tab-item';
 @import 'components/tab-nav';
