Updating title-area__header to title-area__heading for consistency

--- a/rca/project_styleguide/templates/patterns/pages/errors/404.html
+++ b/rca/project_styleguide/templates/patterns/pages/errors/404.html
@@ -12,7 +12,7 @@
     <header class="page__header bg bg--dark">
         <div class="title-area grid">
             <div class="title-area__content">
-                <h1 class="title-area__header heading heading--display-two">{{ settings.utils.SystemMessagesSettings.title_404 }}</h1>
+                <h1 class="title-area__heading heading heading--display-two">{{ settings.utils.SystemMessagesSettings.title_404 }}</h1>
                 <div class="title-area__introduction introduction">{{ settings.utils.SystemMessagesSettings.body_404|richtext }}</div>
             </div>
         </div>
