Renaming staff-detail component to profile-detail to avoid confusion with page template Staff detail

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -62,6 +62,7 @@
 @import 'components/pathways';
 @import 'components/pathway-item';
 @import 'components/partnerships';
+@import 'components/profile-detail';
 @import 'components/profile-teaser';
 @import 'components/programme-overview';
 @import 'components/proposition-statement';
@@ -79,7 +80,6 @@
 @import 'components/slide';
 @import 'components/slideshow';
 @import 'components/social-item';
-@import 'components/staff-detail';
 @import 'components/staff-overview';
 @import 'components/step-item';
 @import 'components/stat-block';
