Job titles styling

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -46,6 +46,7 @@
 @import 'components/hero';
 @import 'components/hero-action-pane';
 @import 'components/icon';
+@import 'components/job-titles';
 @import 'components/image';
 @import 'components/image-caption-link';
 @import 'components/introduction';
